action bar removed

--- a/App/app/src/main/res/layout/activity_game.xml
+++ b/App/app/src/main/res/layout/activity_game.xml
@@ -6,4 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".GameActivity">
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="178dp"
+        android:layout_marginTop="353dp"
+        android:layout_marginEnd="175dp"
+        android:layout_marginBottom="359dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
