--- a/App/app/src/main/res/layout/activity_home.xml
+++ b/App/app/src/main/res/layout/activity_home.xml
@@ -24,7 +24,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/home_Settings_Button" />
+            android:text="@string/onOffMusic" />
     </LinearLayout>
 
     <LinearLayout
