--- a/App/app/src/main/res/layout/activity_game.xml
+++ b/App/app/src/main/res/layout/activity_game.xml
@@ -6,6 +6,21 @@
     android:layout_height="match_parent"
     tools:context=".GameActivity">
 
+    <fragment
+        android:id="@+id/Game_Fragment"
+        android:name="cpp.concentrationgameapp.GameFragment"
+
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constrainedHeight="true"
+        app:layout_constrainedWidth="true"
+        app:layout_constraintHeight_percent="1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent=".75"
+        tools:layout="@layout/fragment_game" />
+
+
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout3"
@@ -91,15 +106,5 @@
         </android.support.constraint.ConstraintLayout>
 
     </android.support.constraint.ConstraintLayout>
-
-    <TableLayout
-        android:id="@+id/cardTable"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:gravity="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/constraintLayout3"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
