--- a/App/app/src/main/res/layout/fragment_game.xml
+++ b/App/app/src/main/res/layout/fragment_game.xml
@@ -8,13 +8,14 @@
     tools:context=".GameFragment">
 
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
+    <TableLayout
+        android:id="@+id/cardTable"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
