Home Panel Redesigned

--- a/App/app/src/main/res/layout/activity_home.xml
+++ b/App/app/src/main/res/layout/activity_home.xml
@@ -5,55 +5,88 @@
     android:id="@+id/mainContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#9AD66B6B"
+    android:background="#3C3737"
     tools:context=".HomeActivity">
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:gravity="end"
         android:orientation="horizontal"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
         app:layout_constrainedHeight="true"
+        app:layout_constraintBottom_toTopOf="@+id/homeLogo"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.15"
+        app:layout_constraintHeight_percent="0.10"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <Button
             android:id="@+id/homeSettingsButton"
-            android:layout_width="0dp"
+            style="@style/Widget.AppCompat.Button"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/onOffMusic" />
+            android:background="#393B40"
+            android:text="@string/onOffMusic"
+            android:textColor="#FFFFFF" />
     </LinearLayout>
 
+    <ImageView
+        android:id="@+id/homeLogo"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="16dp"
+        android:contentDescription="@string/HomeLogoDescription"
+        app:layout_constrainedHeight="true"
+        app:layout_constrainedWidth="true"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent=".11"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        app:srcCompat="@drawable/logov2"
+        tools:ignore="ImageContrastCheck" />
+
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="match_parent"
+        android:id="@+id/linearLayout2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:gravity="bottom|end"
         android:orientation="vertical"
         app:layout_constrainedHeight="true"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.80"
+        app:layout_constraintHeight_percent="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+        app:layout_constraintTop_toBottomOf="@id/homeLogo">
 
         <Button
             android:id="@+id/homePlayButton"
+            style="@style/Widget.AppCompat.Button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/home_Play_Button" />
+            android:background="#393B40"
+            android:text="@string/home_Play_Button"
+            android:textColor="#FFFFFF" />
 
         <Button
             android:id="@+id/homeHighScoresButton"
+            style="@style/Widget.AppCompat.Button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/home_High_Scores_Button" />
+            android:background="#393B40"
+            android:text="@string/home_High_Scores_Button"
+            android:textColor="#FFFFFF" />
 
         <Button
             android:id="@+id/homeExitButton"
+            style="@style/Widget.AppCompat.Button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/home_Exit_Button" />
+            android:background="#393B40"
+            android:text="@string/home_Exit_Button"
+            android:textColor="#FFFFFF" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
