--- a/App/app/src/main/res/layout/activity_game.xml
+++ b/App/app/src/main/res/layout/activity_game.xml
@@ -7,7 +7,7 @@
     tools:context=".GameActivity">
 
     <fragment
-        android:id="@+id/Game_Fragment"
+        android:id="@+id/gameFragment"
         android:name="cpp.concentrationgameapp.GameFragment"
 
         android:layout_width="0dp"
@@ -85,14 +85,14 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/end_Game_Button"
-                app:layout_constraintBottom_toTopOf="@+id/newGameEnd"
+                app:layout_constraintBottom_toTopOf="@+id/newGameButton"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0" />
 
             <Button
-                android:id="@+id/newGameEnd"
+                android:id="@+id/newGameButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
