--- a/App/app/src/main/res/layout/activity_high_score.xml
+++ b/App/app/src/main/res/layout/activity_high_score.xml
@@ -2,7 +2,6 @@
 
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#3C3737"
@@ -25,9 +24,10 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
             android:gravity="center_horizontal"
-            android:text="Tile count:"
+            android:text="@string/tile_count"
             android:textColor="@color/white"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
         <Spinner
             android:id="@+id/tile_dropdown"
@@ -50,7 +50,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:gravity="center_horizontal"
-        android:text="1. Score 1 - 8"
+        android:text="@string/high_score_1"
         android:textColor="@color/white"
         android:textSize="48sp"
         android:textStyle="bold"
@@ -66,7 +66,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:gravity="center_horizontal"
-        android:text="2. Score 2 - 6"
+        android:text="@string/high_score_2"
         android:textColor="@color/white"
         android:textSize="48sp"
         android:textStyle="bold"
@@ -82,7 +82,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:gravity="center_horizontal"
-        android:text="3. Score 3 - 4"
+        android:text="@string/high_score_3"
         android:textColor="@color/white"
         android:textSize="48sp"
         android:textStyle="bold"
