--- a/App/app/src/main/res/layout/card_fragment.xml
+++ b/App/app/src/main/res/layout/card_fragment.xml
@@ -10,7 +10,7 @@
         android:id="@+id/word"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@+id/cardBack"
         app:layout_constraintEnd_toEndOf="@+id/cardBack"
         app:layout_constraintStart_toStartOf="@+id/cardBack"
