--- a/App/app/src/main/res/layout/card_fragment.xml
+++ b/App/app/src/main/res/layout/card_fragment.xml
@@ -2,9 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="64dp"
-    android:layout_height="96dp"
-    app:layout_constraintDimensionRatio="1:1">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/word"
