--- a/App/app/src/main/res/layout/card_fragment.xml
+++ b/App/app/src/main/res/layout/card_fragment.xml
@@ -5,15 +5,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/word"
+    <ImageView
+        android:id="@+id/cardBackground"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="Card back"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/card_background" />
+
+    <TextView
+        android:id="@+id/word"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:maxLines="1"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        android:textStyle="bold"
         android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="@+id/cardBack"
-        app:layout_constraintEnd_toEndOf="@+id/cardBack"
-        app:layout_constraintStart_toStartOf="@+id/cardBack"
-        app:layout_constraintTop_toTopOf="@+id/cardBack" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/cardBack"
