--- a/App/app/src/main/res/layout/activity_high_score.xml
+++ b/App/app/src/main/res/layout/activity_high_score.xml
@@ -37,6 +37,7 @@
             android:layout_marginEnd="32dp"
             android:layout_weight="0.5"
             android:backgroundTint="@color/white"
+            android:contentDescription="@string/tile_count2"
             android:minHeight="32dp"
             android:spinnerMode="dropdown" />
 
@@ -89,4 +90,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/high_score_2" />
+
+    <Button
+        android:id="@+id/backButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginBottom="32dp"
+        android:text="@string/back"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
